fixed overflow selects

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -135,3 +135,7 @@
   stroke: #777;
   fill: #777;
 }
+
+.select-dropdown div:nth-of-type(2) {
+  margin-bottom: 50px;
+}
